yokel/daily/7.22/终端命令.md
# 终端命令

启动mongo

```
service mongodb start 
```

查看mongo状态

```
sudo systemctl status mongodb
q退出查看
或sudo pgrep mongo -l
```

mongo的基本操作

```
启动mongoose的shell界面
mongo
show dbs                //显示数据库列表
use <collection>        //选择数据表
db.getMongo()            //查看端口
show collections          //显示当前数据库中的集合（类似关系数据库中的表table）
db.createCollection('集合名')         //创建集合
show users               //显示所有用户
use test           //切换当前数据库至test
db.help()           //显示数据库操作命令
```

```
db.user.find({"_id":ObjectId("5f0eb47dd28ecc4fdbe1fdc7")}).pretty()
```

```
db.user.update({"_id":ObjectId("5f0eb47dd28ecc4fdbe1fdc7")},{$set:{"password":NumberInt(123)}})
```

```
db.user.deleteMany({username:"yokel3"})
```

```
db.user.find({username:/y\w*k\w*l1/})   匹配yokel1  y*k*l1
```

```
db.getCollection('user').find({$or:[{friends:"text1"},{friends:"text2"}]}).count()
```

```
db.user.update({},[{"$set":{"class_name":{"$concat":["$school"," ","$major"," ","$class"]}}}],{multi:true})
```

结束mongo

```
sudo service mongodb stop
```



启动redis

```
redis-server
```

查看redis状态

```
redis-cli 进入终端
ping 检查状态 
set <key> <value> 设置数据
get <key> 获取数据
del <key> 删除数据
keys *  查看所有key
exit 退出终端 
```

结束redis

```
redis-cli shutdown 正常结束
kill -9 <pid> 强制结束
```



